--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,5 @@ apphost
 *.assets
 
 #Folders
-[0-9][0-9][0-9][0-9]/*
-![0-9][0-9][0-9][0-9]/*.cs
+Problems/[0-9][0-9][0-9][0-9]/*
+!Problems/[0-9][0-9][0-9][0-9]*.cs
